# GreenGrade

./: .env  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
cpp/: CMakeLists.txt
cpp/gmp/: build_gmp_arm64.sh  build_gmp_armeabi.sh  build_gmp_x86.sh  build_gmp_x86_64.sh
cpp/gmp/build_arm64/: Makefile  config.h  config.m4  config.status  gmpxx.pc  libgmp.la  libtool
cpp/gmp/build_arm64/.libs/: libgmp.libcmd  libgmpxx.la  libgmpxx.soT
cpp/gmp/build_arm64/cxx/: Makefile
cpp/gmp/build_arm64/demos/: Makefile
cpp/gmp/build_arm64/doc/: Makefile
cpp/gmp/build_arm64/mpf/: Makefile
cpp/gmp/build_arm64/mpn/: Makefile
cpp/gmp/build_arm64/mpq/: Makefile
cpp/gmp/build_arm64/mpz/: Makefile
cpp/gmp/build_arm64/printf/: Makefile
cpp/gmp/build_arm64/rand/: Makefile
cpp/gmp/build_arm64/scanf/: Makefile
cpp/gmp/build_armeabi/: Makefile  config.h  config.m4  config.status  gmp.h  gmp.pc  gmpxx.pc  libgmpxx.la  libtool  sieve_table.h
cpp/gmp/build_x86/: Makefile  config.h  config.m4  config.status  gmp.h  gmp.pc  gmpxx.pc  libgmpxx.la  libtool
cpp/gmp/build_x86_64/: Makefile  config.h  config.m4  config.status  gmp.h  gmp.pc  gmpxx.pc  libtool
cpp/src/: SIIBruteForceScalable_15BI's.cpp  example.cpp
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcworkspace/xcshareddata/: WorkspaceSettings.xcsettings
lib/: GEMINICALCULATOR.dart  HomePage.dart  QRCodeCompressor.dart  QRCodes.dart  SIIFORM.dart  SIIGEMINI.dart  SIILandingPage.dart  main.dart  qr_scanner.dart  reserve.dart  result_screen.dart  test.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+132 files in other folders)
